--- a/database.yml
+++ b/database.yml
@@ -2,9 +2,10 @@
 development:
   dialect: postgres
   database: budget_tracker_development
-  user: postgres
-  password: postgres
-  host: db
+  user: {{envOr "DB_USER" "postgres"}}
+  password: {{envOr "DB_PASSWORD" "postgres"}}
+  host: {{envOr "DB_HOST" "127.0.0.1"}}
+  port: {{envOr "DB_PORT" "5432"}}
   pool: 5
 
 test:
